#73: [Frontpage] Basics: layout, claim, etc. (http://github.com/Mapzone/mapzone/issues/issue/73)
  - lighter scrollbar: minimize action color; less separation between panels

--- a/plugins/org.polymap.rhei.batik/resources/css/md/md-standard.css
+++ b/plugins/org.polymap.rhei.batik/resources/css/md/md-standard.css
@@ -2054,22 +2054,31 @@ ScrollBar {
   background-image: none;
   border: none;
   border-radius: 0;
-  border: 2px solid inherit;
-  width: 8px;
+  border: 3px solid inherit;
+  width: 10px;
 }
 
 /* line 12, ../../sass/md/_scrollbar.scss */
 ScrollBar-Thumb {
-  background-color: #b0d1f1;
-  /*#d8d8d8;*/
+  background-color: #dddddd;
   border: none;
-  /*1px solid #e8e8e8;*/
   border-radius: 15px;
-  /*background-image: url( resource/widget/rap/scrollbar/scrollbar-background.png );*/
   min-height: 20px;
 }
 
-/* line 20, ../../sass/md/_scrollbar.scss */
+/* line 18, ../../sass/md/_scrollbar.scss */
+ScrollBar-Thumb:hover {
+  background-color: #9ac5ed;
+  border: 2px solid #9ac5ed;
+}
+
+/* line 22, ../../sass/md/_scrollbar.scss */
+ScrollBar-Thumb:pressed {
+  background-color: #6face6;
+  border: 2px solid #6face6;
+}
+
+/* line 26, ../../sass/md/_scrollbar.scss */
 ScrollBar-UpButton,
 ScrollBar-DownButton {
   background-color: transparent;
